syntax = "proto3";

import "Room/RoomPositionData.proto";

message PlaceRoomContentFurnitureData {
    string id = 1;
    string furniture_id = 2;

    bool stackable = 3;
}
